hphp/hack/test/typecheck/this_as_argument.php.like_types.exp
File "this_as_argument.php", line 20, characters 18-19:
Invalid argument (Typing[4110])
File "this_as_argument.php", line 7, characters 36-39:
Expected ~C because it is an unenforceable type
File "this_as_argument.php", line 9, characters 24-24:
But got <expr#1>
File "this_as_argument.php", line 20, characters 18-19:
  where '<expr#1>' is a reference to this expression
